# zkboogie

./: Cargo.toml  LICENSE  README.md  wasm_build.sh
.cargo/: config.toml
benches/: circom_twitter.rs  many_muls.rs
src/: backend.rs  circuit.rs  finite.rs  frontend.rs  lib.rs  storage.rs  wasm.rs  zkboo.rs  zkboogi.rs  zkboogie.rs
src/backend/: ark.rs  native.rs
src/backend/ark/: poseidon254_ark.rs
src/backend/native/: poseidon254_native.rs  sha256_native.rs
src/circuit/: encode.rs
src/zkboogie/: common.rs  encode.rs  prover.rs  recursion.rs
test_circom/: test1.circom
test_circom/test1_js/: test1.wasm
