[package]
name = "zkboo-recursion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = "0.4.0"
itertools = "0.12.1"
# halo2curves = "0.6.1"
ark-ff = { version = "^0.3.0", default-features = false }
thiserror = "1.0.43"
arkworks-native-gadgets = { version = "1.2.1", git = "https://github.com/webb-tools/zero-knowledge-gadgets.git" }
arkworks-utils = { version = "1.0.1", git = "https://github.com/webb-tools/zero-knowledge-gadgets.git", features = [
    "poseidon_bn254_x5_5",
] }
ark-bn254 = { version = "^0.3.0", default-features = false, features = [
    "curve",
] }
ark-std = { version = "^0.3.0", default-features = false }
