[package]
name = "zkboogie-recursion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
num-bigint = "0.4.0"
itertools = "0.13.0"
ark-grumpkin = { version = "0.4.0", features = ["r1cs"] }

# halo2curves = "0.6.1"
ark-ff = { version = "^0.4.0", default-features = false }
thiserror = "1.0.39"
arkworks-native-gadgets = { version = "1.2.1", git = "https://github.com/SoraSuegami/zero-knowledge-gadgets.git" }
arkworks-r1cs-gadgets = { version = "1.2.1", git = "https://github.com/SoraSuegami/zero-knowledge-gadgets.git" }
arkworks-utils = { version = "1.0.1", git = "https://github.com/SoraSuegami/zero-knowledge-gadgets.git", features = [
    "poseidon_bn254_x5_5",
] }
ark-bn254 = { version = "^0.4.0", default-features = false, features = [
    "curve",
    "r1cs",
] }
ark-std = { version = "^0.4.0", features = ["print-trace"] }
rayon = "1.10.0"
sha2 = "0.10.8"
serde_json = "1.0.117"
serde = { version = "1.0.202", features = ["derive"] }
bincode = "1.0"
rand = "0.8.5"
hex = "0.4.3"
ark-relations = "0.4.0"
ark-r1cs-std = "0.4.0"
folding-schemes = { version = "0.1.0", git = "https://github.com/privacy-scaling-explorations/sonobe.git" }
ark-poly-commit = "^0.4.0"
ark-groth16 = { version = "^0.4.0" }
ark-crypto-primitives = { version = "^0.4.0", default-features = false, features = [
    "r1cs",
    "sponge",
    "crh",
] }

# plonky2 = { version = "0.1.4", git = "https://github.com/0xPolygonZero/plonky2.git", rev = "39a2d62d6d025631380da88aa78c2f8b929852a2" }
# plonky2_crypto = { version = "0.1.0", git = "https://github.com/SoraSuegami/plonky2-crypto.git", branch = "fix/sha2_padding" }

[target.'cfg(target_family = "wasm")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
wasm-bindgen = "0.2"
rayon = "1.8"
wasm-bindgen-rayon = "1.2"
js-sys = "0.3"
console_error_panic_hook = "0.1.7"

[target.'cfg(not(target_family = "wasm"))'.dependencies]
ark-circom = { version = "0.1.0", git = "https://github.com/arkworks-rs/circom-compat.git", features = [
    "circom-2",
] }
petgraph = "0.6.4"


[dev-dependencies]
criterion = "0.5.1"
serde_json = "1.0.68"


[[bench]]
name = "many_muls"
harness = false


# [[bench]]
# name = "circom_twitter"
# harness = false
[patch.crates-io]
ark-r1cs-std = { git = "https://github.com/winderica/r1cs-std", branch = "cherry-pick" }
ark-bn254 = { git = "https://github.com/arnaucube/ark-curves-cherry-picked", branch = "cherry-pick" }
ark-grumpkin = { git = "https://github.com/arnaucube/ark-curves-cherry-picked", branch = "cherry-pick" }
